fix: corrigir wiring do DaoAuthenticationProvider e CORS no SecurityConfig
- Troca construtor do DaoAuthenticationProvider por setters explícitos
  (setUserDetailsService + setPasswordEncoder) para garantir que o
  UserDetailsService seja usado na autenticação
- Adiciona /auth/**, /api/auth/** e /api/v1/auth/** no permitAll
  para cobrir qualquer variação de rota pública
- Mantém ProviderManager explícito no AuthenticationManager
- CORS liberado para https://hupstst.netlify.app e origens de dev

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>